# Techbeer

./: README.md
PowerAppsBackendFunctions/: PowerAppsReceiver.sln
PowerAppsBackendFunctions/PowerAppsReceiver/: PowerAppsReceive.cs  PowerAppsReceiver.csproj
RaspberryPiPhotoSender/: camera.py  constant_default.py
RaspberryPiTemperatureSensor/: CMakeLists.txt  azureiothubclient.c  azureiothubclient.h  techbeer.c
TemperatureDataBackendFunction/: tech-beer.sln
TemperatureDataBackendFunction/API/: API.csproj  Program.cs  Startup.cs  appsettings.json
TemperatureDataBackendFunction/API/Controllers/: TemperatureController.cs
TemperatureDataBackendFunction/API/Logic/: Mapper.cs  MyLogger.cs  TemperatureManager.cs
TemperatureDataBackendFunction/API/Model/: TemperatureModel.cs
TemperatureDataBackendFunction/Core/: AppSettings.cs  Enum.cs
TemperatureDataBackendFunction/Core/Adapters/: APIEndpoint.cs  DataCreatorAdapter.cs  DataManager.cs  DataReaderAdapter.cs
TemperatureDataBackendFunction/Core/Entities/: TemperatureTelemetry.cs
TemperatureDataBackendFunction/Core/Util/: HttpRequest.cs  ILog.cs
TemperatureDataBackendFunction/FunctionStoreData/: FunctionStoreData.cs  FunctionStoreData.csproj  Settings.cs  Startup.cs
TemperatureDataBackendFunction/FunctionStoreData/API/: LineAPI.cs  PowerBIAPI.cs  PowerBIHybridAPI.cs
TemperatureDataBackendFunction/Storage/: CloudStorageManager.cs  DataCreator.cs  DataReader.cs  Storage.csproj  StorageTableManager.cs  TableKeysCreator.cs  TableTelemetryEntity.cs  TelemetryMaper.cs
(+5 files in other folders)
